hphp/test/slow/enum_class/enum_class01.php.expectf
Fatal error: Invalid expression in constant initializer in %s/enum_class01.php on line 9
